[+] add request for new table
